<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMenu">

    <!-- RelativeLayout ensures that the BottomNavigationView stays at the bottom -->

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollView"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation"
        android:layout_alignParentTop="true"
        android:background="@color/bg">

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="4dp"
                android:text="@string/all_games"
                android:textSize="32sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGame"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:background="@drawable/game_background"
                    android:src="@drawable/game_math"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="4dp"
                    android:text="@string/math_text_view"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/imageViewGame"
                    app:layout_constraintHorizontal_bias="0.056"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageViewGame" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGame2"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:background="@drawable/game_background"
                    android:src="@drawable/game_memory"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="4dp"
                    android:text="@string/memory_text_view"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/imageViewGame2"
                    app:layout_constraintHorizontal_bias="0.056"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageViewGame2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGame3"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:background="@drawable/game_background"
                    android:src="@drawable/game_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="4dp"
                    android:text="@string/language_text_view"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/imageViewGame3"
                    app:layout_constraintHorizontal_bias="0.056"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageViewGame3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- More games can be added here -->
        </LinearLayout>
    </ScrollView>

    <!-- BottomNavigationView fixed at the bottom -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="37dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>
